# gromnie

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ASYNC.md  CLAUDE.md  Cargo.toml  Dockerfile  LOGIN_FLOW.md  PROGRESS.md  README.md  SUMMARY.mda  TODO  agents.md  build.rs  clean_up_plan.md  code_review.md  dist-workspace.toml  docker-compose.yml  fnconsumer.md  good_and_bad_packet.log.pcapng  plan.md  test_messages.sh
.cargo/: config.toml
.github/workflows/: build-setup.yml  ci.yml  deploy.yml  release.yml
.poolside/: settings.local.yaml
crates/gromnie-cli/: Cargo.toml
crates/gromnie-cli/src/: app.rs  cli_runtime.rs  draw.rs  lib.rs  load_tester.rs  main.rs  mod.rs
crates/gromnie-cli/src/wizards/: config.rs  launch.rs
crates/gromnie-client/: Cargo.toml
crates/gromnie-client/src/: config.rs  instant.rs  lib.rs  transport.rs
crates/gromnie-client/src/client/: ace_protocol.rs  client.rs  connection.rs  constants.rs  event_bus.rs  events.rs  game_event_handler.rs  game_event_handlers.rs  message_handler.rs  message_handlers.rs  mod.rs  protocol_conversions.rs  refactored_event_bus.rs  scene.rs  session.rs  types.rs
crates/gromnie-client/src/client/messages/: mod.rs  queue.rs
crates/gromnie-client/src/client/protocol/: extensions.rs  login.rs
crates/gromnie-client/src/config/: account_config.rs  client_config.rs  config.rs  gromnie_config.rs  mod.rs  paths.rs  scripting_config.rs  server_config.rs
crates/gromnie-client/src/crypto/: crypto_system.rs  magic_number.rs
crates/gromnie-client/src/scripts/: auto_create_char.rs  auto_greet.rs  auto_login.rs  debug_logger.rs  hello_world.rs  mod.rs
crates/gromnie-client/tests/: scene_architecture_tests.rs  test_helpers.rs  test_helpers_unit.rs  test_serialization.rs
crates/gromnie-client/tests/common/: mod.rs
crates/gromnie-discord-bot/: Cargo.toml
crates/gromnie-events/: Cargo.toml
crates/gromnie-events/src/: client_events.rs  instant.rs  keyboard_events.rs  lib.rs  protocol_events.rs  script_events.rs  simple_client_actions.rs  simple_game_events.rs  system_events.rs
crates/gromnie-load-tester/: Cargo.toml
crates/gromnie-proxy/: Cargo.toml  Dockerfile
crates/gromnie-proxy/src/: main.rs
crates/gromnie-proxy/tests/: e2e.rs
crates/gromnie-runner/: Cargo.toml
crates/gromnie-runner/src/: character_gen.rs  client_naming.rs  client_runner.rs  client_runner.rs.bak  client_runner_builder.rs  event_bus.rs  event_consumer.rs  event_wrapper.rs  logging.rs  mod.rs
crates/gromnie-scripting/: Cargo.toml
crates/gromnie-scripting-api/: Cargo.toml  build.rs
crates/gromnie-scripting-api/src/: bindings.rs  events.rs  lib.rs
crates/gromnie-scripting-api/src/wit/: gromnie-script.wit
crates/gromnie-scripting-host/: Cargo.toml
crates/gromnie-scripting-host/src/: context.rs  lib.rs  registry.rs  reload.rs  script_runner.rs  script_scanner.rs  timer.rs
crates/gromnie-scripting-host/src/wasm/: bindings.rs  engine.rs  loader.rs  wasm_script.rs
crates/gromnie-scripting-host/tests/: hot_reload_integration_test.rs  integration_tests.rs  timeout_unit_tests.rs
crates/gromnie-scripting/src/: context.rs  mod.rs  registry.rs  script.rs  script_runner.rs
crates/gromnie-scripting/src/wasm/: bindings.rs  engine.rs  loader.rs  mod.rs  wasm_script.rs
crates/gromnie-tui/: Cargo.toml
crates/gromnie-tui/src/: app.rs  event_handler.rs  keyboard.rs  lib.rs  main.rs  object_tracker.rs  ui.rs
crates/gromnie-tui/src/components/: mod.rs
crates/gromnie-tui/src/views/: mod.rs
crates/gromnie-tui/src/views/debug/: mod.rs
crates/gromnie-tui/src/views/game/: character_select.rs  connecting.rs  error.rs  mod.rs  world.rs
crates/gromnie-tui/src/widgets/: chat.rs  mod.rs
crates/gromnie-web/: .env.example  Cargo.toml  Dockerfile  README.md  agents.md  package-lock.json  package.json  vite.config.js
crates/gromnie-web/demo/: README.md  index.html  main.js  ui.js
crates/gromnie-web/demo/components/: character-select.js  error-overlay.js  index.js  log-viewer.js  login-form.js  status-bar.js  world-view.js
crates/gromnie-web/demo/css/: theme.css
crates/gromnie-web/demo/harness/: run-loader-smoke.cjs
crates/gromnie-web/demo/public/: worker.js
crates/gromnie-web/pkg/: gromnie_web.d.ts  gromnie_web.js  gromnie_web_bg.wasm  gromnie_web_bg.wasm.d.ts
crates/gromnie-web/src/: client.rs  lib.rs  transport.rs  util.rs
crates/gromnie-wisp/: Cargo.toml
crates/gromnie-wisp/src/: lib.rs
crates/xtask/: Cargo.toml
data/pcaps/: login.pcap
docs/: acnetworkprotocol.md  actestclient.txt  scripting.md  wit-codegen.md
etc/: ac_proto.lua
etc/wix/: main.wxs
examples/movement-demo/: Cargo.toml
examples/position-tracker/: Cargo.toml
pcaps/: login_wireshark.pcap
scripts/: Cargo.toml  README.md
scripts/auto-login/: Cargo.toml
scripts/auto-login/src/: lib.rs
scripts/bindings/: Cargo.toml
scripts/bindings/src/: lib.rs
scripts/echo-tell/: Cargo.toml
scripts/echo-tell/src/: lib.rs
scripts/file-logger/: Cargo.toml
scripts/file-logger/src/: lib.rs
scripts/hello-world/: Cargo.toml
scripts/hello-world/src/: lib.rs
scripts/spell-caster/: Cargo.toml
scripts/spell-caster/src/: lib.rs
scripts/trade-acceptor/: Cargo.toml
scripts/trade-acceptor/src/: lib.rs
scripts/xtask/: Cargo.toml
scripts/xtask/src/: main.rs
src/: check.rs  checksum.rs  client.rs  config.rs  deku.rs  lib.rs  load_tester.rs  main.rs  messages.rs  uptime_client.rs
src/cli/: app.rs  mod.rs
src/client/: ace_protocol.rs  client.rs  constants.rs  events.rs  messages.rs  mod.rs  task.rs
src/crypto/: crypto_system.rs  magic_number.rs  mod.rs
src/lib/: lib.rs  main.rs  messages.rs  uptime_client.rs
src/messages/: connect_response.rs  login_request.rs  mod.rs  packet.rs
tests/: checksum_test.rs  crpyto_test.rs  deku_test.rs  message_test.rs  scene_architecture_tests.rs  scripting_tests.rs  test_helpers.rs  test_helpers_unit.rs  test_serialization.rs
tests/scripting/: Cargo.toml  test_script.wasm
tests/scripting/src/: build.rs  lib.rs  timeout_test.rs
wit/: gromnie-script.wit
wix/: main.wxs
(+60 files in other folders)
