[workspace]
members = [
  "crates/gromnie-cli",
  "crates/gromnie-client",
  "crates/gromnie-runner",
  "crates/gromnie-scripting",
  "crates/gromnie-tui",
  "crates/xtask"
]
resolver = "2"

[workspace.package]
version = "0.1.0-beta.1"
authors = ["Bryce Mecum <petridish@gmail.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/amoeba/gromnie.git"

[workspace.dependencies]
chrono = "0.4"
wit-bindgen = "0.36"

[profile.dist]
inherits = "release"
lto = "thin"
