[workspace]
resolver = "2"
members = [
  "crates/gromnie-cli",
  "crates/gromnie-client",
  "crates/gromnie-events",
  "crates/gromnie-runner",
  "crates/gromnie-scripting-api",
  "crates/gromnie-scripting-host",
  "crates/gromnie-tui",
  "crates/xtask",
  "tests/scripting"
]
default-members = [
  "crates/gromnie-cli",
  "crates/gromnie-client",
  "crates/gromnie-events",
  "crates/gromnie-runner",
  "crates/gromnie-scripting-api",
  "crates/gromnie-scripting-host",
  "crates/gromnie-tui",
  "crates/xtask"
]

[workspace.package]
version = "0.1.0"
authors = ["Bryce Mecum <petridish@gmail.com>"]
edition = "2024"
repository = "https://github.com/amoeba/gromnie.git"
license = "MIT"

[workspace.dependencies]
acprotocol = { git = "https://github.com/amoeba/asheron-rs", rev = "ddbffb90f44ab2c8899d70f29d723025082815ad" }
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5.2", features = ["derive"] }
crossterm = "0.28"
directories = "5.0"
ratatui = { version = "0.29", features = ["serde"] }
serenity = { version = "0.12", features = ["client", "gateway", "http", "utils"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmtime = { version = "28.0", features = ["component-model"] }
wasmtime-wasi = "28.0"
wit-bindgen = "0.36"

[profile.dist]
inherits = "release"
lto = "thin"
