[workspace]
resolver = "2"
members = [
  "crates/gromnie-cli",
  "crates/gromnie-client",
  "crates/gromnie-events",
  "crates/gromnie-proxy",
  "crates/gromnie-runner",
  "crates/gromnie-scripting-api",
  "crates/gromnie-scripting-host",
  "crates/gromnie-tui",
  "crates/gromnie-web",
  "crates/gromnie-wisp",
  "crates/xtask",
  "tests/scripting",
]
default-members = [
  "crates/gromnie-cli",
  "crates/gromnie-client",
  "crates/gromnie-events",
  "crates/gromnie-proxy",
  "crates/gromnie-runner",
  "crates/gromnie-scripting-api",
  "crates/gromnie-scripting-host",
  "crates/gromnie-tui",
  "crates/xtask"
]

[workspace.package]
version = "0.1.0"
authors = ["Bryce Mecum <petridish@gmail.com>"]
edition = "2024"
repository = "https://github.com/amoeba/gromnie.git"
license = "MIT"

[workspace.dependencies]
asheron-rs = { git = "https://github.com/amoeba/asheron-rs" }
anyhow = "1.0"
chrono = "0.4"
dirs = "5"
thiserror = "2.0"
tokio = { version = "1.36" }
clap = { version = "4.5.0", features = ["derive", "env"] }
crossterm = "0.28"
directories = "5.0"
ratatui = { version = "0.29", features = ["serde"] }
serenity = { version = "0.12", features = ["client", "gateway", "http", "utils"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmtime = { version = "36.0", features = ["component-model"] }
wasmtime-wasi = "36.0"
wit-bindgen = "0.57"
wisp-mux = { git = "https://github.com/MercuryWorkshop/epoxy-tls", package = "wisp-mux", rev = "0c11678d72a636c3a4bc723db87e03e7b888eaf9", default-features = false, features = ["wasm", "tokio-tungstenite"] }

[profile.dist]
inherits = "release"
lto = "thin"
