[workspace]
resolver = "2"
members = [
  "auto-login",
  "file-logger",
  "hello-world",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
wit-bindgen = "0.36"

[profile.release]
opt-level = "z"  # Optimize for size
strip = true  # Strip symbols
lto = true  # Link-time optimization
panic = "abort"  # Smaller binary
codegen-units = 1  # Better optimization
