[workspace]
resolver = "2"
members = [
  "auto-login",
  "file-logger",
  "hello-world",
]

[workspace.package]
version = "0.1.0"
authors = ["Bryce Mecum <petridish@gmail.com>"]
edition = "2024"
license = "MIT"

[workspace.dependencies]
wit-bindgen = "0.36"

[profile.release]
opt-level = "z"  # Optimize for size
strip = true  # Strip symbols
lto = true  # Link-time optimization
panic = "abort"  # Smaller binary
codegen-units = 1  # Better optimization
