[package]
name = "gromnie-cli"
description = "CLI tools for Asheron's Call"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
name = "gromnie_cli"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "discord-bot"
path = "src/bin/discord-bot.rs"

[[bin]]
name = "load-tester"
path = "src/bin/load-tester.rs"

[dependencies]
gromnie-client = { path = "../gromnie-client" }
gromnie-runner = { path = "../gromnie-runner" }
clap = { version = "4.5.2", features = ["derive"] }
crossterm = "0.28"
ratatui = { version = "0.29", features = ["serde"] }
serenity = { version = "0.12", features = ["client", "gateway", "http", "utils"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
