[package]
name = "gromnie-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "CLIs for gromnie"
repository.workspace = true
license.workspace = true

[lib]
name = "gromnie_cli"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "discord-bot"
path = "src/bin/discord-bot.rs"

[[bin]]
name = "load-tester"
path = "src/bin/load-tester.rs"

[dependencies]
clap.workspace = true
crossterm.workspace = true
gromnie-client = { path = "../gromnie-client" }
gromnie-runner = { path = "../gromnie-runner" }
ratatui.workspace = true
serenity.workspace = true
tokio = { version = "1.36.0", features = ["full"] }
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
