[package]
name = "gromnie-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Asheron's Call client library"
repository.workspace = true
license.workspace = true

[lib]
name = "gromnie_client"
path = "src/lib.rs"

[dependencies]
acprotocol = { git = "https://github.com/amoeba/asheron-rs", rev = "a165e6ca82dd913281cb6280538ee5ab3bd1ef4b" }
anyhow = "1.0"
bitflags = "2.6"
byteorder = "1.5.0"
chrono.workspace = true
clap = { version = "4.5.2", features = ["derive"] }
crossterm = "0.28"
directories = "5.0"
rand = "0.8"
rand_isaac = "0.3"
ratatui = { version = "0.29", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serenity = { version = "0.12", features = ["client", "gateway", "http", "utils"] }
strum_macros = "0.26.1"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasmtime = { version = "28.0", features = ["component-model"] }
wasmtime-wasi = "28.0"
wit-bindgen = "0.36"

[dev-dependencies]
