[package]
name = "gromnie-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "client library for gromnie"
repository.workspace = true
license.workspace = true

[lib]
name = "gromnie_client"
path = "src/lib.rs"

[dependencies]
acprotocol.workspace = true
anyhow.workspace = true
bitflags = "2.6"
byteorder = "1.5.0"
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
directories.workspace = true
gromnie-events = { path = "../gromnie-events" }
rand = "0.8"
rand_isaac = "0.3"
ratatui.workspace = true
serde = { version = "1.0", features = ["derive"] }
serenity.workspace = true
strum_macros = "0.26.1"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8"
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wit-bindgen.workspace = true

[dev-dependencies]
