[package]
name = "gromnie-discord-bot"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Discord bot for gromnie"
repository.workspace = true
license.workspace = true

[[bin]]
name = "discord-bot"
path = "src/main.rs"

[dependencies]
clap.workspace = true
gromnie-client = { path = "../gromnie-client" }
gromnie-runner = { path = "../gromnie-runner" }
serenity.workspace = true
tokio = { version = "1.36.0", features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
