[package]
name = "gromnie-events"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Event system traits and types for gromnie"
repository.workspace = true
license.workspace = true

[lib]
name = "gromnie_events"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36.0", features = ["sync"] }
