[package]
name = "gromnie-events"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Event system traits and types for gromnie"
repository.workspace = true
license.workspace = true

[lib]
name = "gromnie_events"
path = "src/lib.rs"

[features]
default = ["native"]
native = []
wasm = ["js-sys"]

[dependencies]
asheron-rs.workspace = true
serde = { version = "1.0", features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }
js-sys = { version = "0.3", optional = true }
