[package]
name = "gromnie-load-tester"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Load testing tool for gromnie"
repository.workspace = true
license.workspace = true

[[bin]]
name = "load-tester"
path = "src/main.rs"

[dependencies]
clap.workspace = true
gromnie-cli = { path = "../gromnie-cli" }
gromnie-client = { path = "../gromnie-client" }
gromnie-runner = { path = "../gromnie-runner" }
tokio = { version = "1.36.0", features = ["full"] }
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
