[package]
name = "gromnie-proxy"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "WISP proxy server for tunneling UDP to AC game servers"
repository.workspace = true
license.workspace = true

[[bin]]
name = "gromnie-proxy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true }
futures = "0.3"
tokio.workspace = true
tokio-tungstenite = "0.27"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wisp-mux = { workspace = true, features = ["tokio-tungstenite"] }
