[package]
name = "gromnie-proxy"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "WISP proxy server for tunneling UDP to AC game servers"
repository.workspace = true
license.workspace = true

[[bin]]
name = "gromnie-proxy"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bytes = "1"
clap = { workspace = true }
cookie = "0.18"
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
time = "0.3"
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = "0.27"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wisp-mux = { workspace = true, features = ["tokio-tungstenite"] }
