[package]
name = "gromnie-runner"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Client runner gromnie"
repository.workspace = true
license.workspace = true

[lib]
name = "gromnie_runner"
path = "src/mod.rs"

[dependencies]
acprotocol = { git = "https://github.com/amoeba/asheron-rs", rev = "a165e6ca82dd913281cb6280538ee5ab3bd1ef4b" }
chrono.workspace = true
gromnie-client = { path = "../gromnie-client" }
serenity.workspace = true
tokio = { version = "1.36.0", features = ["full"] }
tracing.workspace = true
