[package]
name = "gromnie-runner"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Client runner gromnie"
repository.workspace = true
license.workspace = true

[lib]
name = "gromnie_runner"
path = "src/mod.rs"

[dependencies]
acprotocol.workspace = true
chrono.workspace = true
gromnie-client = { path = "../gromnie-client" }
serenity.workspace = true
thiserror = "2.0"
tokio = { version = "1.36.0", features = ["full"] }
tracing.workspace = true
