[package]
name = "gromnie-runner"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Client runner gromnie"
repository.workspace = true
license.workspace = true

[lib]
name = "gromnie_runner"
path = "src/mod.rs"

[dependencies]
acprotocol.workspace = true
chrono.workspace = true
gromnie-client = { path = "../gromnie-client" }
gromnie-events = { path = "../gromnie-events" }
gromnie-scripting-host = { path = "../gromnie-scripting-host", optional = true }
serenity.workspace = true
thiserror = "2.0"
tokio = { version = "1.36.0", features = ["full"] }
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["scripting"]
scripting = ["gromnie-scripting-host"]
