[package]
name = "gromnie-scripting-host"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Host runtime for loading and executing WASM scripts in gromnie"
repository.workspace = true
license.workspace = true

[lib]
name = "gromnie_scripting_host"
path = "src/lib.rs"

[dependencies]
acprotocol.workspace = true
gromnie-scripting-api = { path = "../gromnie-scripting-api" }
gromnie-client = { path = "../gromnie-client" }
gromnie-events = { path = "../gromnie-events" }
anyhow.workspace = true
directories.workspace = true
tokio = { version = "1.36.0", features = ["full"] }
toml.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
