[package]
name = "gromnie-scripting"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Wasm-based scripting system for gromnie"
repository.workspace = true
license.workspace = true

[lib]
name = "gromnie_scripting"
path = "src/mod.rs"

[dependencies]
anyhow.workspace = true
directories.workspace = true
gromnie-client = { path = "../gromnie-client" }
tokio = { version = "1.36.0", features = ["full"] }
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
wit-bindgen.workspace = true
