[package]
name = "gromnie-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "TUI game client for gromnie"
repository.workspace = true
license.workspace = true

[lib]
name = "gromnie_tui"
path = "src/lib.rs"

[[bin]]
name = "tui"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
gromnie-client = { path = "../gromnie-client" }
gromnie-runner = { path = "../gromnie-runner" }
gromnie-scripting-host = { path = "../gromnie-scripting-host" }
ratatui.workspace = true
tokio = { version = "1.36.0", features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
