[package]
name = "gromnie-tui"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "TUI game client for gromnie"
repository.workspace = true
license.workspace = true

[[bin]]
name = "tui"
path = "src/main.rs"

[dependencies]
acprotocol.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
gromnie-client = { path = "../gromnie-client" }
gromnie-events = { path = "../gromnie-events" }
gromnie-runner = { path = "../gromnie-runner" }
gromnie-scripting-host = { path = "../gromnie-scripting-host", optional = true }
ratatui.workspace = true
tokio = { version = "1.36.0", features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
default = ["scripting"]
scripting = ["gromnie-scripting-host"]
