[package]
name = "gromnie-web"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "WISP-over-WebSocket wasm client bindings for gromnie"
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
event-listener = "5.4"
flume = "0.11"
futures = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
gromnie-client = { path = "../gromnie-client", default-features = false, features = ["wasm"] }
js-sys = "0.3"
send_wrapper = { version = "0.6", features = ["futures"] }
thiserror = "2.0"
tokio = { version = "1.36.0", features = ["sync"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["BinaryType", "console", "MessageEvent", "WebSocket"] }
wisp-mux.workspace = true
